<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="3dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imgViewid"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher_round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txthotenid"
            android:layout_gravity="left|center"
            android:layout_width="wrap_content"
            android:text="@string/name_txthoten"
            android:gravity="center"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edithotenid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="160dp"
            android:inputType="text"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtcannangid"
            android:layout_gravity="left|center"
            android:layout_width="wrap_content"
            android:text="@string/name_txtcannang"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editcannangid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="160dp"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtchieucaoid"
            android:layout_gravity="left|center"
            android:layout_width="wrap_content"
            android:text="@string/name_txtchieucao"
            android:gravity="center"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editchieucaoid"
            android:inputType="text"
            android:width="160dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:gravity="center|top"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnkiemtraid"
            android:text="@string/name_btnkiemtra"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btntiepid"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/name_btntiep" />

        <Button
            android:id="@+id/btnthoatid"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/name_btnthoat" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="5dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtkqid"
            android:layout_gravity="left|center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_txtketqua"
            android:gravity="center" />
    </LinearLayout>
</LinearLayout>


